--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,34 @@
+:root {
+    --title-color: #2E2F42;       /* title,button, logo, background */
+    --accent-color: #404BBF;      /* hover,focus */
+    --text-color: #434455;        /* text and address*/
+    --back-hero-color: #FFFFFF;   /* hero's text, background and text(hover,focus)*/
+    --back-footer-color: #F4F4FD; /* logo, btn(background -text and -color)*/
+    --logo-btn-color: #4D5AE5;    /* logo,btn text and background*/
+    --logo-border-color: #e7e9fc;/* logo-footer,btn border*/
+    --title-hero-weight: 500;
+}
+
 body{
     font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0,32px;
+    color: var(--title-color)
+}
+
+.title {
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.72px;
+    text-transform: capitalize;
+}
+
+.subtitle {
+    font-weight: var(--title-hero-weight);
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.4px;
 }
 
 .link {
@@ -8,6 +37,14 @@ body{
 
 .list {
     list-style-type: none;
+}
+
+.btn {
+    font-family: inherit;
+    font-weight: var(--title-hero-weight);
+    line-height: inherit;
+    letter-spacing: 0.64px;
+    cursor: pointer;
 }
 
 /* #region Header */
@@ -20,10 +57,9 @@ body{
 .nav-logo,
 .footer-studio-logo,
 .footer-portfolio-logo {
-    color: var(--IRIS, #4D5AE5);
+    color: var(--logo-btn-color);
     font-family: Raleway;
     font-size: 18px;
-    font-style: normal;
     font-weight: 800;
     line-height: 1.17;
     letter-spacing: 0.54px;
@@ -31,7 +67,7 @@ body{
 }
 
 .header-second-logo {
-    color: var(--NAVY-BLUE, #2E2F42);
+    color: var(--title-color);
 }
 
 /* .nav-list {} */
@@ -39,17 +75,13 @@ body{
 /* .nav-list-item {} */
 
 .nav-item-link {
-    color: var(--NAVY-BLUE, #2E2F42);
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.32px;
+    color: inherit;
+    font-weight: var(--title-hero-weight);
 }
 
 .nav-item-link:hover,
 .nav-item-link:focus {
-    color: var(--OCEAN, #404BBF);
+    color: var(--accent-color);
 }
 
 /* .header-studio-address {} */
@@ -59,60 +91,42 @@ body{
 /* .adress-list-item {} */
 
 .address-item-link {
-    color: var(--SLATE, #434455);
-    font-size: 16px;
+    color: inherit;
     font-style: normal;
-    font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 0.32px;
 }
 
 .address-item-link:hover,
 .address-item-link:focus {
-    color: var(--OCEAN, #404BBF);
+    color: var(--accent-color);
 }
 
 /* #endregion */
 
 /* #region Hero */
 .hero {
-    background: var(--NAVY-BLUE, #2E2F42);
+    background: var(--title-color);
 }
 
 .hero-title {
-    color: var(--WHITE, #FFF);
+    color: var(--back-hero-color);
 
     font-size: 56px;
-    font-style: normal;
-    font-weight: 700;
     line-height: 1.07;
     letter-spacing: 1.12px;
-}
-
-.btn {
-    font-family: inherit;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.64px;
 }
 
 .hero-btn {
     width: 169px;
     height: 56px;
     border-radius: 4px;
-    color: var(--WHITE, #FFF);
-    background: var(--IRIS, #4D5AE5);
+    color: var(--back-hero-color);
+    background: var(--logo-btn-color);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
 .hero-btn:hover,
 .hero-btn:focus {
-
-    border-radius: 4px;
-    background: var(--OCEAN, #404BBF);
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    background: var(--accent-color);
 }
 
 /* #endregion */
@@ -138,37 +152,16 @@ body{
 
 /* .features-list-item {} */
 
-.features-item-title {
-    color: var(--NAVY-BLUE, #2E2F42);
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 1.2;
-    letter-spacing: 0.4px;
-}
+/* .features-item-title {} */
 
-.features-item-text {
-    color: var(--SLATE, #434455);
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 0.32px;
-}
+/* .features-item-text {} */
+
 /* #endregion */
 
 /* #region Products */
 /* .products {} */
 
-.products-title {
-    color: var(--NAVY-BLUE, #2E2F42);
-    font-size: 36px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 1.11;
-    letter-spacing: 0.72px;
-    text-transform: capitalize;
-}
+/* .products-title {} */
 
 /* .products-list {} */
 
@@ -179,66 +172,43 @@ body{
 
 /* #region Team */
 .team {
-    background: var(--CLOUD, #F4F4FD);  
+    background: var(--back-footer-color);  
 }
 
-.team-title {
-    color: var(--NAVY-BLUE, #2E2F42);
-    font-size: 36px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 1.11;
-    letter-spacing: 0.72px;
-    text-transform: capitalize;
-}
+/* .team-title {} */
 
 /* .team-list {} */
 
 .team-list-item {
     border-radius: 0px 0px 4px 4px;
-    background: var(--WHITE, #FFF);
+    background: var(--back-hero-color);
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 /* .team-item-img {} */
 
-.team-item-title {
-    color: var(--NAVY-BLUE, #2E2F42);
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 1.2;
-    letter-spacing: 0.4px;
-}
+/* .team-item-title {} */
 
 .team-item-text {
-    color: var(--SLATE, #434455);
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 0.32px;
+    color: var(--text-color)
 }
+
 /* #endregion Team */
 
 /* #region Studio Footer */
 .footer-studio,
 .footer-portfolio{
-    background: var(--NAVY-BLUE, #2E2F42);
+    background: var(--title-color);
 }
 
-.logo-footer {
-    color: var(--CLOUD, #F4F4FD);;
+.footer-second-logo {
+    color: var(--back-footer-color);
 }
 
-.footer-stidio-text,
+.footer-studio-text,
 .footer-portfolio-text {
-    color: var(--CLOUD, #F4F4FD);
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 0.32px;}
+    color: var(--back-footer-color);
+}
 
 /* #endregion Studio Footer */
 
@@ -265,24 +235,20 @@ body{
 /* .filter-list-item {} */
 
 .filter-item-btn {
-    color: var(--IRIS, #4D5AE5);
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 1.5;
+    color: var(--logo-btn-color);
+    font-weight: var(--title-hero-weight);
     letter-spacing: 0.64px;
 
     border-radius: 4px;
-    border: 1px solid var(--CORNFLOWER, #E7E9FC);
-    background: var(--CLOUD, #F4F4FD);
+    border: 1px solid var(--logo-border-color);
+    background-color: var(--back-footer-color);
 }
 
 .filter-item-btn:hover,
 .filter-item-btn:focus {
-    color: var(--WHITE, #FFF);
+    color: var(--back-hero-color);
 
-    border-radius: 4px;
-    background: var(--OCEAN, #404BBF);
+    background: var(--accent-color);
     box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.10);
 }
 
@@ -292,34 +258,12 @@ body{
 
 /* .projects-item-img {} */
 
-.projects-item-title {
-    color: var(--NAVY-BLUE, #2E2F42);
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 1.2;
-    letter-spacing: 0.4px;
-}
+/* .projects-item-title {} */
 
 .projects-item-text {
-    color: var(--SLATE, #434455);
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 0.32px;
+    color: var(--text-color);
 }
 /* #endregion Project Portfolio */
 
 /* #region Portfolio Footer */
-.footer-second-logo {
-    color: var(--CLOUD, #F4F4FD);
-    font-family: Raleway;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 800;
-    line-height: 1.17;
-    letter-spacing: 0.54px;
-    text-transform: uppercase;
-}
 /* #endregion Portfolio Footer */
